veux_defconfig: adjust cmdline for faster boot
Signed-off-by: engstk <eng.stk@sapo.pt>
Change-Id: If942a6cd5d3ba86f356fce228ff14191ca2fa19e
Signed-off-by: TogoFire <togofire@mailfence.com>

--- a/arch/arm64/configs/veux_defconfig
+++ b/arch/arm64/configs/veux_defconfig
@@ -65,7 +65,7 @@ CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_CMDLINE="cgroup_disable=pressure"
+CONFIG_CMDLINE="quiet cgroup_disable=pressure"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_DMI is not set
 CONFIG_WT_QGKI=y
