veux_defconfig: Enable UNAME_OVERRIDE
[TogoFire]: Adapt to veux.
Signed-off-by: Juhyung Park <qkrwngud825@gmail.com>
Change-Id: I68ffd3a43ca320a7b2dd92c35d5dcc893f330599

--- a/arch/arm64/configs/veux_defconfig
+++ b/arch/arm64/configs/veux_defconfig
@@ -3,6 +3,9 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_UNAME_OVERRIDE=y
+CONFIG_UNAME_OVERRIDE_TARGET="com.google.android.gms"
+CONFIG_UNAME_OVERRIDE_STRING="5.4.274-qgki-g82179e362f33"
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
